--- a/metadata.yaml
+++ b/metadata.yaml
@@ -59,5 +59,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Shakespeare, William, 1564-1616'
 - !lcc 'PR'
+- GITenberg
 title: A Day with William Shakespeare
 url: http://www.gutenberg.org/ebooks/40441
